Hid remove button while editing contact.

--- a/BackboneSimpleApp/Views/Home/Index.cshtml
+++ b/BackboneSimpleApp/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
             display: none; /* Hides input box*/
         }
 
-        #contact-list .editing label, #contact-list .editing .edit-button {
+        #contact-list .editing label, #contact-list .editing .edit-button, #contact-list .editing .destroy {
             display: none; /* Hides label text when .editing*/
         }
 
